ci: install and build before publishing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,8 @@ jobs:
           node-version-file: .node-version
           cache: yarn
 
+      - run: yarn install --immutable
+
       - run: yarn pack -o package.tgz
 
       - uses: actions/upload-artifact@v3
